added title and description, fixed cell width issue

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Collapsing Boxes a game created using ReactJS</title>
+    <meta name="description" content="This is my first game created using ReactJS framework">        
+    <link rel="image_src" href="./public/game.png"/>
   </head>
   <body>
-   <div className="container" id="container">
+   <div class="container">
     <div id="root"></div>
     </div>
     <!--
