--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     -->
     <title>Collapsing Boxes a game created using ReactJS</title>
     <meta name="description" content="This is my first game created using ReactJS framework">        
-    <link rel="image_src" href="./public/game.png"/>
+    <link rel="image_src" href="./game.png"/>
   </head>
   <body>
    <div class="container">
