added favicon, og:image tag

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Collapsing Boxes a game created using ReactJS</title>
+    <title>Collapsing Boxes a game created using ReactJS framework</title>
     <meta name="description" content="This is my first game created using ReactJS framework">        
-    <link rel="image_src" href="./game.png"/>
+    <meta property="og:image" content="%PUBLIC_URL%/game.png"/>
+    <link rel="image_src" href="%PUBLIC_URL%/game.png"/>
   </head>
   <body>
    <div class="container">
