fixed message, added og:url

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Collapsing Boxes a game created using ReactJS framework</title>
+    <title>Collapsing Boxes: a game created using ReactJS framework</title>
     <meta name="description" content="This is my first game created using ReactJS framework">        
+    <meta property="og:url" content="%PUBLIC_URL%"/>
     <meta property="og:image" content="%PUBLIC_URL%/game.png"/>
     <link rel="image_src" href="%PUBLIC_URL%/game.png"/>
   </head>
